[package]
name = "floccus"
version = "0.4.0"
authors = ["Jakub Lewandowski <scaleweather@gmail.com>"]
edition = "2021"
description = "Formulae for air thermodynamic calculations"
repository = "https://github.com/ScaleWeather/floccus"
readme = "README.md"
keywords = ["oceanography", "thermodynamics", "meteorology", "weather"]
categories = ["mathematics", "science"]
license = "Apache-2.0"
exclude = [".github/*"]

[dependencies]
thiserror = "1.0"
float-cmp = "0.9"
log = { version = "0.4", optional = true }
ndarray = { version = "0.15", default-features = false, optional = true }
rayon = { version = "1.8", default-features = false, optional = true }
uom = { version = "0.35", default-features = false, features = [
    "si",
    "std",
    "autoconvert",
    "f32",
    "f64",
] }
num-traits = { version = "0.2", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = "0.5.1"

[workspace]
members = ["floccus-proc"]

[features]
default = ["array", "parallel", "debug", "double_precision"]
debug = ["log"]
double_precision = []
array = ["ndarray"]
parallel = ["array", "ndarray/rayon", "rayon"]

# [[bench]]
# name = "virtual_temperature"
# harness = false

# [[bench]]
# name = "vapour_pressure"
# harness = false

# [[bench]]
# name = "vapour_pressure_deficit"
# harness = false

# [[bench]]
# name = "mixing_ratio"
# harness = false

# [[bench]]
# name = "wet_bulb_temperature"
# harness = false

# [[bench]]
# name = "relative_humidity"
# harness = false

# [[bench]]
# name = "specific_humidity"
# harness = false

# [[bench]]
# name = "potential_temperature"
# harness = false

# [[bench]]
# name = "equivalent_potential_temperature"
# harness = false

# [[bench]]
# name = "wet_bulb_potential_temperature"
# harness = false
