[package]
name = "floccus"
version = "0.4.0-alpha.1"
authors = ["Jakub Lewandowski <scaleweather@gmail.com>"]
edition = "2021"
description = "Formulae for air thermodynamic calculations"
repository = "https://github.com/ScaleWeather/floccus"
readme = "README.md"
keywords = ["oceanography", "thermodynamics", "meteorology", "weather"]
categories = ["mathematics", "science"]
license = "Apache-2.0"
exclude = [".github/*"]

[dependencies]
floccus-proc = "0.3.0"
thiserror = "1.0"
float-cmp = "0.9"
log = { version = "0.4", optional = true }
ndarray = { version = "0.15", default-features = false, optional = true }
rayon = { version = "1", default-features = false, optional = true }
uom = { version = "0", default-features = false, features = [
    "si",
    "std",
    "autoconvert",
    "f32",
    "f64",
] }
cfg-if = "1.0"

[lib]
doctest = false

[dev-dependencies]
criterion = "0"
itertools = "0"
testing_logger = "0.1"
floccus = { path = "." , features = ["double_precision"] }

[features]
default = []
debug = ["log"]
double_precision = []
array = ["ndarray"]
parallel = ["array", "ndarray/rayon", "rayon"]

[[bench]]
name = "floccus_formulas"
harness = false
