[package]
name = "floccus-proc"
version = "0.3.0"
edition = "2021"
description = "Procedural macros for floccus crate"
repository = "https://github.com/ScaleWeather/floccus"
readme = "README.md"
keywords = ["macro"]
categories = ["parsing"]
license = "Apache-2.0"
exclude = [
    ".github/*",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
